# libp5glove

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO.txt  autogen.sh  configure.ac  configure.in  linux-2.4.patch  make-win32.bat  p5glove.c  test
demo/: Makefile.am  p5common.c  p5common.h  p5dump.c  p5hand.c
doc/: usb-dump.txt
macosx/driver/: README.txt
macros/: opengl.m4
src/: Makefile.am  macosx_usb_hid.c  macosx_usb_hid.h  p5glove.c  p5glove.h  usb_hid_libusb.c  win32_usb_hid.c  win32_usb_hid.h
win32/: README  hid.def  make_hacked_libhid.bat
