dnl Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(libp5glove,0.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Check for X11
AC_PATH_X
AC_PATH_XTRA

dnl Check for GL libs
oldLIBS="$LIBS"
LIBS="$X_LIBS $X_EXTRA_LIBS"
AC_CHECK_LIB(GL,glEnable,,exit)
AC_CHECK_LIB(GLU,gluPerspective,,exit,-lGL -lm)
AC_CHECK_LIB(glut,glutMainLoop,,exit,-lGLU -lGL -lm)
LIBS="$oldLIBS"

dnl Replace `main' with a function in -lusb:
AC_CHECK_LIB(usb, usb_open)

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS(gettimeofday strerror)

AC_OUTPUT([
	Makefile
	src/Makefile
	demo/Makefile
])
